Compiler/tests/bad/function11.nx

function somar(x : int, y : int) : int
{

}

print(somar(2, 3));